syntax = "proto3";

package yandex.cloud.loadtesting.agent.v1;

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/loadtesting/agent/v1;agent";
option java_package = "yandex.cloud.api.loadtesting.agent.v1";

import "google/api/annotations.proto";


service JobService {

  // Claims status for the specified job.
  rpc ClaimStatus (ClaimJobStatusRequest) returns (ClaimJobStatusResponse) {
    option (google.api.http) = { post: "/loadtesting/agent/v1/jobs/{job_id}/claimStatus" body: "*" };
  };

  // Returns the job for the specified agent.
  rpc Get (GetJobRequest) returns (Job) {
    option (google.api.http) = { get: "/loadtesting/agent/v1/agents/{agent_instance_id}/getJob" };
  };

  // Returns the signal for the specified job.
  rpc GetSignal (JobSignalRequest) returns (JobSignalResponse) {
    option (google.api.http) = { get: "/loadtesting/agent/v1/jobs/{job_id}/getSignal" };
  };

}

message Job {
  string id = 1;
  string config = 2;
  File ammo = 3;
  string logging_log_group_id = 4;
  StorageObject test_data = 5;
}

message File {
  string name = 1;
  bytes content = 2;
}

message StorageObject {
  string object_storage_bucket = 1;
  string object_storage_filename = 2;
}

message GetJobRequest {
  string compute_instance_id = 1;
  string agent_instance_id = 2;
}

message ClaimJobStatusRequest {
  string job_id = 1;
  enum JobStatus {
    JOB_STATUS_UNSPECIFIED = 0;
    POST_PROCESS = 1;
    INITIATED = 2;
    PREPARING = 3;
    NOT_FOUND = 4;
    RUNNING = 5;
    FINISHING = 6;
    FINISHED = 7;
    STOPPED = 8;
    FAILED = 9;
    AUTOSTOPPED = 10;
    WAITING_FOR_A_COMMAND_TO_RUN = 11;
  }
  JobStatus status = 2;
  string error = 3;
}

message ClaimJobStatusResponse {
  int64 code = 1;
}

message JobSignalRequest {
  string job_id = 1;
}

message JobSignalResponse {
  enum Signal {
    SIGNAL_UNSPECIFIED = 0;
    STOP = 1;
    WAIT = 2;
    RUN_IN = 3;
  }
  Signal signal = 1;
  double wait_duration = 2; // seconds
  double run_in = 3; // seconds
}
